Change names and images

--- a/manifest.json
+++ b/manifest.json
@@ -16,20 +16,20 @@
         }
       ],
     "page_action": {
-		"default_title": "Matomo browser tools by Open Digital Analytics",    
+		"default_title": "Matomo browser tools by @tomper00",    
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/oda-logo-16.png",
             "32": "images/oda-logo-32.png",
-            "48": "images/oda-logo-48.png",
+            "48": "images/oda-logo-64.png",
             "128": "images/oda-logo-128.png"
         }
     },
     "icons": {
-        "16": "images/digi16.png",
-        "32": "images/digi32.png",
-        "48": "images/digi48.png",
-        "128": "images/digi128.png"
+        "16": "images/oda-logo-16.png",
+        "32": "images/oda-logo-32.png",
+        "48": "images/oda-logo-64.png",
+        "128": "images/oda-logo-128.png"
     },
     "manifest_version": 2
 }
